--- a/src/components/style.css
+++ b/src/components/style.css
@@ -35,7 +35,7 @@ body {
 
 .login-box .user-box input {
   width: 130%;
-  padding: 10px 0;
+  padding: 10px 10px;
   font-size: 16px;
   color: #fff;
   margin-bottom: 21px;
@@ -57,7 +57,7 @@ body {
 
 .login-box .user-box input:focus ~ label,
 .login-box .user-box input:valid ~ label {
-  top: -20px;
+  top: -31px;
   left: 0;
   color: #03e9f4;
   font-size: 12px;
@@ -275,3 +275,24 @@ button {
   margin: 0.5em;
   padding: 1em 2em;
 }
+/* ============== */
+.grid-container{
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  gap: 10px;
+  background-color: transparent;
+  padding: 10px;
+}
+.grid-container > div {
+  background-color: transparent;
+  /* background-color: rgba(255, 255, 255, 0.8); */
+  border: 1px solid transparent;
+  text-align: center;
+  font-size:10px;
+  color: white;
+  padding-top:600px;
+}
+
+
+
+/*  */
